fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --clr-background: #fffff7;
   --clr-background1: #ffebeb;
   --clr-background2: #ecfeec;
-  --box-shadow: 0 13px 30px rgba(0, 0, 0, 0.11);
+  --box-shadow: 0 13px 30px #0000001c;
 
   /* --clr-primary: #ff6d39;
   --clr-secondary: #007200;
